# rules_rust_iana_repro

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  WORKSPACE.bazel
src/: main.rs
